--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
         "barryvdh/laravel-debugbar": "^3.6",
         "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.9.1",
+        "laravel-lang/lang": "^10.7",
+        "laravel-lang/publisher": "^12.2",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3"
